# Rokenbok-Smart-Port-WiFi

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.esp32-s3-devkitc-1
3dprint/: README.md  body.stl  lid.stl  smartportcase.FCStd
doc/: RC Keys Guide.docx  RC Keys Guide.md  Smart Port Documentation.docx  Smart Port WiFi Adapter Doc.md
doc/rokenbok/: RC Keys Guide.md  Smart Port Documentation.md
firmware/: version.json
src/: CMakeLists.txt  main.c
src/embed/: admin.html  help.html  index.html  initindex.html  initupdate.html  mobile.html
